Use custom domain

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -52,17 +52,19 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: status.enderdrachelp.tk
+  cname: status.elp.quest
   # themeUrl: https://raw.githubusercontent.com/EnderdracheLP/Beat-Saber-Uptime/master/assets/custom_dark.css
   theme: night
-  baseUrl: /Beat-Saber-Uptime/
+  # baseUrl: /
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Beat Saber Uptime
   introTitle: "**Beat Saber Uptime** Status for Beat Saber Official and Unofficial Services."
   introMessage: This is the current status of Beat Saber and Beat Saber modding related sites and Services
   navbar:
+    - title: Main Site
+      href: https://EnderdracheLP.elp.quest
     - title: Status
-      href: /Beat-Saber-Uptime/
+      href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
       
