--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -36,6 +36,9 @@ sites:
   - name: Beat Saber Legacy
     url: https://bslegacy.com
     icon: https://bslegacy.com/img/block.png
+  - name: OculusDB
+    url: https://oculusdb.rui2015.me/
+    icon: https://oculusdb.rui2015.me/favicon.ico
   - name: Official MP Server Status - Steam
     url: $BS_MP_STEAM
     icon: https://beatsaber.com/images/favicon/favicon.ico
